<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/bg_signup">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ab_quyzygy" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="4sp">

            <TextView
                android:id="@+id/tv_firstName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/first_name"
                android:textAlignment="textEnd"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_lastName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/last_name"
                android:textAlignment="textEnd"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/e_mail"
                android:textAlignment="textEnd"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/password"
                android:textAlignment="textEnd"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_password2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/repeat_password"
                android:textAlignment="textEnd"
                android:textSize="22sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="5sp">

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_accountType" />

    <RadioGroup
        android:id="@+id/rg_accountType"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RadioButton
            android:id="@+id/rb_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/student"
            android:textSize="26sp" />

        <RadioButton
            android:id="@+id/rb_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor"
            android:textSize="26sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>