<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:background="@drawable/bg_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_quizName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_name"/>
            <EditText
                android:id="@+id/et_quizName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"/>
            <EditText
                android:id="@+id/et_duration"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course" />

            <EditText
                android:id="@+id/et_courseName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/btn_save_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveQuiz"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/public_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Public" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sv_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_field_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="#555"
                android:onClick="onAddQuestion"
                android:paddingLeft="5dp"
                android:text="@string/add_question"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>